nginx/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  annotations:
    service.beta.kubernetes.io/ncloud-loadbalancer-layer-type: "nlb"
    service.beta.kubernetes.io/ncloud-loadbalancer-internal: "false"
    app: nginx
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: nginx
