nginx/nginx-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: nginx-gateway
  namespace: nginx
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
        - "istio-syste-istio-ingres-da4cf-16957343-bb773de71644.kr.lb.naverncp.com"
      port:
        name: http
        number: 30002
        protocol: HTTP
